# wallpaper-scene-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mull.yml
.github/workflows/: mutation.yml  tests.yml
cmake/: FetchMull.cmake  WekHardening.cmake  WekSanitize.cmake  WekWarnings.cmake  WekWerrorScoped.cmake
qml_helper/: EngineResolution.hpp  HoverLeaveDebounce.h  JsStringEscape.hpp  JsSyntaxNormalize.hpp  JsWatchdog.h  LocalStorageQuota.hpp  PropertyScriptDispatchJs.hpp  SceneAspect.h  SceneBackend.cpp  SceneBackend.hpp  SceneCursorEvent.h  SceneCursorHitTest.h  SceneScriptShimsJs.hpp  SceneTimerBridge.h  ScriptDiagState.h  ScriptLoopGate.h  TextScriptResult.hpp  glExtra.cpp
src/: AttachmentLinkOrder.hpp  CMakeLists.txt  HWVideoTextureDecoder.cpp  HWVideoTextureDecoder.hpp  Image.hpp  ImagePayload.h  SceneTickHelpers.h  SceneWallpaper.cpp  SceneWallpaper.hpp  SceneWallpaperSurface.hpp  SpecTexs.hpp  SpriteAnimation.hpp  SystemFontFallback.cpp  SystemFontFallback.hpp  Type.cpp  Type.hpp  VideoTextureDecoder.cpp  VideoTextureDecoder.hpp  WPAttachmentProxyGate.hpp  WPCommon.hpp  WPJson.cpp  WPJson.hpp  WPLightKindParse.hpp  WPMapSequenceParse.hpp  WPMdlParser.cpp  WPMdlParser.hpp  WPParticleParser.cpp  WPParticleParser.hpp  WPPkgFs.cpp  WPPkgFs.hpp  WPPropertyAnimation.h  WPPropertyScriptExtract.hpp  WPPuppet.cpp  WPPuppet.hpp  WPRopeCombos.hpp  WPSceneAttachmentCompose.hpp  WPSceneFileResolver.hpp  WPSceneGroupParse.hpp  WPSceneParser.cpp  WPSceneParser.hpp  (+16 more)
src/Audio/: AudioAnalyzer.cpp  AudioBus.cpp  AudioCapture.cpp  CMakeLists.txt  SoundManager.cpp  miniaudio-wrapper.hpp
src/Audio/include/Audio/: AudioAnalyzer.h  AudioBus.h  AudioCapture.h  RebindRetry.hpp  SoundManager.h
src/Core/: MapSet.hpp
src/Fs/include/Fs/: Bswap.hpp  LimitedBinaryStream.h  VFS.h
src/Interface/: ISceneParser.h  IShaderValueUpdater.h
src/Looper/: Looper.cpp
src/Particle/: CMakeLists.txt  ParticleEmitter.cpp  ParticleSystem.cpp  WPParticleRawGener.cpp  WPParticleRawGener_TestHooks.hpp
src/Particle/include/Particle/: AudioRateMultiplier.hpp  BlendWindow.h  HsvColor.h  Particle.h  ParticleCollision.h  ParticleEmitter.h  ParticleModify.h  ParticleSystem.h  ParticleTrail.h  RemapValueOps.hpp  RopeMedian.hpp
src/RenderGraph/: DependencyGraph.cpp
src/Scene/: CMakeLists.txt  Scene.cpp  SceneCamera.cpp  SceneImageEffectLayer.cpp  SceneIndexArray.cpp  SceneLight.cpp  SceneNode.cpp  SceneVertexArray.cpp
src/Scene/include/Scene/: Scene.h  SceneCamera.h  SceneImageEffectLayer.h  SceneIndexArray.h  SceneLight.hpp  SceneMaterial.h  SceneNode.h  SceneRenderTarget.h  SceneVertexArray.h  ShaderCacheKey.h  SpriteSnapshotGate.h  SubTickPlan.hpp  TextStyleMerge.hpp  UniformDirtyGate.h  WorldCacheGate.h
src/Swapchain/: ExSwapchain.hpp
src/Test/: CMakeLists.txt  test_Algorism.cpp  test_AudioAnalyzer.cpp  test_AudioBus.cpp  test_AudioCapture.cpp  test_AudioCapture_Rebind.cpp  test_AudioConsumerGate.cpp  test_AudioRateMultiplier.cpp  test_BinaryStream.cpp  test_BlendModeFactors.cpp  test_CustomShaderPassDesc.cpp  test_CustomShaderPass_DepthBinding.cpp  test_CustomShaderPass_ForceClearOutput.cpp  test_CustomShaderPass_ScratchReuse.cpp  test_CustomShaderPass_stubs.cpp  test_DependencyGraph.cpp  test_DepthSamplerConfig.cpp  test_DepthToColorResolvePass.cpp  test_DepthUsageFlags.cpp  test_Determinism.cpp  test_DeviceCaps.cpp  test_DeviceMemoryBudget.cpp  test_DeviceQueueSelection.cpp  test_FenceWaitRetry.cpp  test_FpsCounter.cpp  test_FramebufferCache.cpp  test_HWVideoTextureDecoder.cpp  test_ImagePayload.cpp  test_Logging.cpp  test_ParticleEmitter.cpp  test_ParticleModify.cpp  test_ParticleSubSystem_BurstDoneQueue.cpp  test_ParticleSystem.cpp  test_ParticleTrail.cpp  test_PassCacheAlias.cpp  test_PipelineCacheIO.cpp  test_RenderGraph.cpp  test_RopeMedian.cpp  test_RopeScratchThreadLocal.cpp  test_Scene.cpp  (+98 more)
src/Test/bench/: bench_RenderGraphTopo.cpp  bench_UniformLookupHash.cpp  bench_WPShaderValueUpdater.cpp  bench_main.cpp
src/Test/fuzz/: fuzz_WPJsonParse.cpp  fuzz_WPMdlParser.cpp  fuzz_WPParticleParser.cpp  fuzz_WPPkgFs.cpp  fuzz_WPSceneParser.cpp  fuzz_WPShaderCompile.cpp  fuzz_WPShaderParser.cpp  fuzz_WPSoundParser.cpp  fuzz_WPTexImageParser.cpp
src/Utils/: CMakeLists.txt  DynamicLibrary.cpp  FpsCounter.cpp  Logging.cpp  SceneProfiler.cpp
src/Utils/include/Utils/: Eigen.h  FpsCounter.h  Hash.h  Logging.h  SceneProfiler.h  String.h
src/Vulkan/: CMakeLists.txt  Device.cpp  GraphicsPipeline.cpp  Instance.cpp  Parameters.cpp  PipelineCacheIO.cpp  Shader.cpp  StagingBuffer.cpp  Swapchain.cpp  TextureCache.cpp  vulkan_wrapper.cpp
src/Vulkan/include/Vulkan/: DebugCallback.hpp  Device.hpp  DirtySpan.hpp  Parameters.hpp  PipelineCacheIO.hpp  SamplerDedupDetail.hpp  Shader.hpp  StagingBuffer.hpp  StagingBufferDetail.hpp  StagingReuse.hpp  Swapchain.hpp  SwapchainPolicy.hpp  TexFormatVk.hpp  TextureCache.hpp  TextureCacheDetail.hpp  VulkanExSwapchain.hpp
src/Vulkan/include/vvk/: vulkan_wrapper.hpp
src/VulkanRender/: CMakeLists.txt  CopyPass.cpp  CopyPass.hpp  CustomShaderPass.cpp  CustomShaderPass.hpp  DepthToColorResolvePass.cpp  DepthToColorResolvePass.hpp  FenceWaitRetry.cpp  FenceWaitRetry.hpp  FinPass.cpp  FinPass.hpp  FramebufferCache.hpp  PassCommon.hpp  PrePass.cpp  Resource.hpp  SceneToRenderGraph.cpp  VolumetricChain.cpp  VulkanRender.cpp
src/VulkanRender/include/VulkanRender/: PassBlendFactors.hpp  PassCacheAlias.hpp  VolumetricChain.hpp  VulkanRender.hpp
src/wpscene/: WPImageObject.cpp  WPImageObject.h  WPLightObject.cpp  WPLightObject.hpp  WPMaterial.cpp  WPMaterial.h  WPModelObject.cpp  WPModelObject.h  WPParticleObject.cpp  WPParticleObject.h  WPScene.cpp  WPScene.h  WPSoundObject.h  WPTextObject.cpp  WPTextObject.h
standalone_view/: CMakeLists.txt  arg.hpp  glfwviewer.cpp  qmlviewer.cpp
tests/fixtures/shaders/effects/: clip-discard.glsl.expected  clip-discard.hlsl  combine-alpha.glsl.expected  combine-alpha.hlsl  geom-shader-rename.glsl.expected  geom-shader-rename.hlsl  uint-modulo.glsl.expected  uint-modulo.hlsl  (+4 more)
tools/: CMakeLists.txt  wp_pkg.cpp
